# SEA-ME-warm-up

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  README.md
.cmake/api/v1/reply/: cache-v2-6383a7e275719ca7ef7e.json  codemodel-v2-b121555d0d22574e3bfc.json  index-2025-07-11T07-09-45-0477.json  target-untitled-Debug-043825d2b27f5be2f2a0.json  target-untitled_autogen-Debug-a434e6f5ee8007695b4e.json
.cmake/api/v1/reply.prev/: cmakeFiles-v1-450b2b2f9d2ddda76118.json  codemodel-v2-51a79fbc94bbb72abcb4.json  directory-.-Debug-141458acda27ede27de6.json  index-2025-07-11T07-06-25-0336.json  target-untitled-Debug-e00dcb139e2e6b28b3a7.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: QCloseEvent.98D778E78BA8426B.idx  QFile.0D7FFCAF5FE2D56F.idx  QList.0BEB56AC785F9872.idx  QMainWindow.2235783BF5652B3F.idx  QMessageBox.B2DCC79F1ED9AD79.idx  QObject.A904B8E4AFB4483E.idx  QSize.CA5BA4BFF7E1D99B.idx  array.5D33F37BA45D84FB.idx  (+474 more)
Module00/: Exercise02.cpp  Exercise03  Exercise03.cpp  book  convert
Module01/: Exercise00.cpp  Exercise01.cpp  Exercise02.cpp
Module01/Exercie03/: Car.cpp  Car.h  ElectricCar.cpp  ElectricCar.h  HybridCar.cpp  HybridCar.h  main.cpp
Module02/: Ex  Exercise01.cpp
Module03/Exercise00/: CMakeLists.txt  contact.cpp  contact.h  contactlist.cpp  contactlist.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Module04/: CMakeLists.txt  car.cpp  car.h  carthread.cpp  carthread.h  main.cpp  racetrack.cpp  racetrack.h  racinggame.cpp  racinggame.h  racinggame.ui  resource.qrc
